trunk/Archive2/95/8577dc7272ed82/output
main.cpp:16:5: error: stray '\321' in program
     с(a);
     ^
main.cpp:16:5: error: stray '\201' in program
main.cpp: In function 'int main()':
main.cpp:16:10: warning: statement has no effect [-Wunused-value]
     с(a);
          ^
main.cpp:13:9: warning: unused variable 'i' [-Wunused-variable]
     int i = 1;
         ^
