trunk/Archive2/95/8577dc7272ed82/main.cpp
struct A
{
    A(int i) {}
};

struct B
{
    B(A a) {}
};

int main()
{
    int i = 1;
    A a(1);
    B b(A(i));
    Ñ(a);
    return 0;
}